--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <ul>
     <b>
-      <li class="a"><a href="http://127.0.0.1:5500/Personal_Website/developer.html">Home</a></li>
-      <li><a href="http://127.0.0.1:5500/Personal_Website/feedback.html">Feedback</a></li>
-      <li><a href="http://127.0.0.1:5500/Personal_Website/index.html">About</a></li>
-      <li><a href="http://127.0.0.1:5500/Personal_Website/family.html">Family</a></li>
-      <li><a href="http://127.0.0.1:5500/Personal_Website/gallery.html">Gallery</a></li>
-      <li><a href="http://127.0.0.1:5500/Personal_Website/location.html">Location</a></li>
+      <li class="a"><a href="developer.html">Home</a></li>
+      <li><a href="feedback.html">Feedback</a></li>
+      <li><a href="index.html">About</a></li>
+      <li><a href="family.html">Family</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="location.html">Location</a></li>
     </b>
   </ul>
 
@@ -182,5 +182,6 @@
   </footer>
 
 </body>
+
 
 </html>
