--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
     <div class="footer-container">
       <div class="footer-section">
         <h3>Navigate</h3>
-        <a href="http://127.0.0.1:5500/Personal_Website/developer.html">Home</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/location.html">Location</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/gallery.html">Gallery</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/family.html">Family</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/index.html">About</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/feedback.html">Feedback</a>
+        <a href="developer.html">Home</a>
+        <a href="location.html">Location</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="family.html">Family</a>
+        <a href="index.html">About</a>
+        <a href="feedback.html">Feedback</a>
       </div>
       <div class="footer-section">
         <h3>Contact</h3>
@@ -185,3 +185,4 @@
 
 
 </html>
+
