--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,12 @@
   <nav>
     <ul>
       <b>
-        <li class="a"><a href="http://127.0.0.1:5500/Personal_Website/developer.html">Home</a></li>
-        <li><a href="http://127.0.0.1:5500/Personal_Website/feedback.html">Feedback</a></li>
-        <li><a href="http://127.0.0.1:5500/Personal_Website/.htmlindex">About</a></li>
-        <li><a href="http://127.0.0.1:5500/Personal_Website/family.html">Family</a></li>
-        <li><a href="http://127.0.0.1:5500/Personal_Website/gallery.html">Gallery</a></li>
-        <li><a href="http://127.0.0.1:5500/Personal_Website/location.html">Location</a></li>
+        <li class="a"><a href="developer.html">Home</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="family.html">Family</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="location.html">Location</a></li>
       </b>
     </ul>
   </nav>
@@ -83,12 +83,12 @@
     <div class="footer-container">
       <div class="footer-section">
         <h3>Navigate</h3>
-        <a href="http://127.0.0.1:5500/Personal_Website/developer.html">Home</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/location.html">Location</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/gallery.html">Gallery</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/family.html">Family</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/index.html">About</a>
-        <a href="http://127.0.0.1:5500/Personal_Website/feedback.html">Feedback</a>
+        <a href="developer.html">Home</a>
+        <a href="location.html">Location</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="family.html">Family</a>
+        <a href="index.html">About</a>
+        <a href="feedback.html">Feedback</a>
       </div>
       <div class="footer-section">
         <h3>Contact</h3>
@@ -110,5 +110,6 @@
     <p class="footer-copy">&copy; 2025 Siddhartha Sanjai. All Rights Reserved.</p>
   </footer>
 </body>
+
 
 </html>
