--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Me</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="about.css">
   <link rel="stylesheet" href="gallery.css">
   <link rel="stylesheet" href="developer.css">
   <link rel="stylesheet" href="utilities.css">
@@ -17,7 +17,7 @@
     <b>
       <li class="a"><a href="developer.html">Home</a></li>
       <li><a href="feedback.html">Feedback</a></li>
-      <li><a href="index.html">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="family.html">Family</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="location.html">Location</a></li>
@@ -158,7 +158,7 @@
         <a href="location.html">Location</a>
         <a href="gallery.html">Gallery</a>
         <a href="family.html">Family</a>
-        <a href="index.html">About</a>
+        <a href="about.html">About</a>
         <a href="feedback.html">Feedback</a>
       </div>
       <div class="footer-section">
@@ -185,4 +185,5 @@
 
 
 </html>
+
 
