Update and rename developer.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siddhu's Portfolio</title>
-    <link rel="stylesheet" href="developer.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="utilities.css">
 </head>
 
@@ -14,9 +14,9 @@
     <nav>
         <ul>
             <b>
-                <li class="a"><a href="developer.html">Home</a></li>
+                <li class="a"><a href="index.html">Home</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="family.html">Family</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="location.html">Location</a></li>
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="container">
-        <div class="developer">
+        <div class="index">
             <img src="Siddhu1.jpg" alt="Siddhartha Sanjai">
             <h2>Siddhartha Sanjai</h2>
             <p>I am a dedicated Computer Science enthusiast pursuing a Bachelor of Computer Applications (BCA) at Marian
@@ -59,11 +59,11 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3>Navigate</h3>
-                <a href="developer.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="location.html">Location</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="family.html">Family</a>
-                <a href="index.html">About</a>
+                <a href="about.html">About</a>
                 <a href="feedback.html">Feedback</a>
             </div>
             <div class="footer-section">
@@ -91,3 +91,4 @@
 
 
 </html>
+
