--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>About Me</title>
   <link rel="stylesheet" href="about.css">
   <link rel="stylesheet" href="gallery.css">
-  <link rel="stylesheet" href="developer.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="utilities.css">
 </head>
 
@@ -15,7 +15,7 @@
 
   <ul>
     <b>
-      <li class="a"><a href="developer.html">Home</a></li>
+      <li class="a"><a href="index.html">Home</a></li>
       <li><a href="feedback.html">Feedback</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="family.html">Family</a></li>
@@ -154,7 +154,7 @@
     <div class="footer-container">
       <div class="footer-section">
         <h3>Navigate</h3>
-        <a href="developer.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="location.html">Location</a>
         <a href="gallery.html">Gallery</a>
         <a href="family.html">Family</a>
@@ -185,5 +185,6 @@
 
 
 </html>
+
 
 
