--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
     <link rel="stylesheet" href="feedback.css">
-    <link rel="stylesheet" href="developer.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="utilities.css">
 </head>
 
@@ -14,9 +14,9 @@
     <nav>
         <ul>
             <b>
-                <li class="a"><a href="developer.html">Home</a></li>
+                <li class="a"><a href="index.html">Home</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="family.html">Family</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="location.html">Location</a></li>
@@ -65,11 +65,11 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3>Navigate</h3>
-                <a href="developer.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="location.html">Location</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="family.html">Family</a>
-                <a href="index.html">About</a>
+                <a href="about.html">About</a>
                 <a href="feedback.html">Feedback</a>
             </div>
             <div class="footer-section">
@@ -95,3 +95,4 @@
 
 
 </html>
+
