--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Photo Gallery</title>
   <link rel="stylesheet" href="gallery.css">
-  <link rel="stylesheet" href="developer.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="utilities.css">
 </head>
 
@@ -14,9 +14,9 @@
   <nav>
     <ul>
       <b>
-        <li class="a"><a href="developer.html">Home</a></li>
+        <li class="a"><a href="index.html">Home</a></li>
         <li><a href="feedback.html">Feedback</a></li>
-        <li><a href="index.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="family.html">Family</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="location.html">Location</a></li>
@@ -83,11 +83,11 @@
     <div class="footer-container">
       <div class="footer-section">
         <h3>Navigate</h3>
-        <a href="developer.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="location.html">Location</a>
         <a href="gallery.html">Gallery</a>
         <a href="family.html">Family</a>
-        <a href="index.html">About</a>
+        <a href="about.html">About</a>
         <a href="feedback.html">Feedback</a>
       </div>
       <div class="footer-section">
@@ -113,3 +113,4 @@
 
 
 </html>
+
