--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="container">
-        <div class="index">
+        <div class="developer">
             <img src="Siddhu1.jpg" alt="Siddhartha Sanjai">
             <h2>Siddhartha Sanjai</h2>
             <p>I am a dedicated Computer Science enthusiast pursuing a Bachelor of Computer Applications (BCA) at Marian
@@ -91,4 +91,5 @@
 
 
 </html>
+
 
